# RHE-mc

./: CMakeLists.txt
include/: arguments.h
src/: rhemc_cov_ldsc_her_def.cpp
